--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-*.zip filter=lfs diff=lfs merge=lfs -text
+*.pyc filter=lfs diff=lfs merge=lfs -text
+*.typed filter=lfs diff=lfs merge=lfs -text
+*.File filter=lfs diff=lfs merge=lfs -text
